--- a/tme7/tme7.ipynb
+++ b/tme7/tme7.ipynb
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 44,
    "metadata": {
     "execution": {
      "iopub.execute_input": "2023-11-11T11:50:30.304032Z",
@@ -553,53 +553,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unexpected exception formatting exception. Falling back to standard exception\n"
+      "[[0.24347301 0.25247284 0.2480025  0.25605165]\n",
+      " [0.24727716 0.23681872 0.34909315 0.16681097]\n",
+      " [0.28462222 0.23058695 0.20782446 0.27696637]\n",
+      " [0.1857911  0.26246354 0.29707437 0.25467098]]\n",
+      "['A', 'T', 'C', 'T', 'T', 'A', 'C', 'A', 'C', 'T', 'A', 'T', 'A', 'A', 'C', 'A', 'C', 'A', 'T', 'A']\n"
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Traceback (most recent call last):\n",
-      "  File \"/home/hitaw/.local/lib/python3.10/site-packages/IPython/core/interactiveshell.py\", line 3398, in run_code\n",
-      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
-      "  File \"/tmp/ipykernel_2601/1005811268.py\", line 1, in <cell line: 1>\n",
-      "    tme7.create_seq(20,[0,0,1,0],A,B,states=[0,1,2,3],obs=['A','T','C','G'])\n",
-      "  File \"/home/hitaw/Documents/MAPSI/tme7/tme7.py\", line 110, in create_seq\n",
-      "    obsers[i] = np.random.choice(obs, p=B[int(etats[i])])\n",
-      "ValueError: could not convert string to float: 'T'\n",
-      "\n",
-      "During handling of the above exception, another exception occurred:\n",
-      "\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/home/hitaw/.local/lib/python3.10/site-packages/IPython/core/interactiveshell.py\", line 1993, in showtraceback\n",
-      "    stb = self.InteractiveTB.structured_traceback(\n",
-      "  File \"/home/hitaw/.local/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 1118, in structured_traceback\n",
-      "    return FormattedTB.structured_traceback(\n",
-      "  File \"/home/hitaw/.local/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 1012, in structured_traceback\n",
-      "    return VerboseTB.structured_traceback(\n",
-      "  File \"/home/hitaw/.local/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 865, in structured_traceback\n",
-      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
-      "  File \"/home/hitaw/.local/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 818, in format_exception_as_a_whole\n",
-      "    frames.append(self.format_record(r))\n",
-      "  File \"/home/hitaw/.local/lib/python3.10/site-packages/IPython/core/ultratb.py\", line 736, in format_record\n",
-      "    result += ''.join(_format_traceback_lines(frame_info.lines, Colors, self.has_colors, lvals))\n",
-      "  File \"/home/hitaw/.local/lib/python3.10/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "  File \"/home/hitaw/.local/lib/python3.10/site-packages/stack_data/core.py\", line 698, in lines\n",
-      "    pieces = self.included_pieces\n",
-      "  File \"/home/hitaw/.local/lib/python3.10/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "  File \"/home/hitaw/.local/lib/python3.10/site-packages/stack_data/core.py\", line 649, in included_pieces\n",
-      "    pos = scope_pieces.index(self.executing_piece)\n",
-      "  File \"/home/hitaw/.local/lib/python3.10/site-packages/stack_data/utils.py\", line 145, in cached_property_wrapper\n",
-      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
-      "  File \"/home/hitaw/.local/lib/python3.10/site-packages/stack_data/core.py\", line 628, in executing_piece\n",
-      "    return only(\n",
-      "  File \"/home/hitaw/.local/lib/python3.10/site-packages/executing/executing.py\", line 164, in only\n",
-      "    raise NotOneValueFound('Expected one value, found 0')\n",
-      "executing.executing.NotOneValueFound: Expected one value, found 0\n"
-     ]
+     "data": {
+      "text/plain": [
+       "(array([2., 3., 1., 2., 3., 1., 2., 3., 1., 2., 3., 1., 2., 3., 1., 2., 3.,\n",
+       "        1., 2., 3.]),\n",
+       " array(['A', 'T', 'C', 'T', 'T', 'A', 'C', 'A', 'C', 'T', 'A', 'T', 'A',\n",
+       "        'A', 'C', 'A', 'C', 'A', 'T', 'A'], dtype='<U1'))"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -670,7 +642,7 @@
     }
    ],
    "source": [
-    "annotation_train2 = tme7.get_annoatation2(annotation_train)\n",
+    "annotation_train2 = tme7.get_annotation2(annotation_train)\n",
     "print(annotation_train[180:280])\n",
     "print(annotation_train2[180:280])"
    ]
